Finish the login page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/metricsubs.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MetricSubs One</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        #preload-container {
+          background-color: #1a1b1e;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root">
       <div
+        id="preload-container"
         style="
           width: 100vw;
           height: 100vh;
